--- a/src/components/landing/landingNavbar/style.css
+++ b/src/components/landing/landingNavbar/style.css
@@ -15,6 +15,12 @@
     padding: 2rem;
 }
 
+.logo {
+    font-size: 20px;
+    font-weight: 600;
+    color: white;
+}
+
 .links {
     display: flex;
     flex-direction: row;
